feat: introduce result-pattern and automatic finalizer management (#980)
BREAKING CHANGE: Change of return types of finalizers and controllers.
To migrate, you'll need to change all instances of finalizers and controllers
to the new return types `Task<ReconciliationResult<TEntity>>` instead
of `Task`. Use the `ReconciliationResult<TEntity>` provided methods
to return your result.

BREAKING CHANGE: `IEntityController<TEntity>` resides now in the
`KubeOps.Abstractions.Reconciliation.Controller` namespace instead of
`KubeOps.Abstractions.Controller`.

BREAKING CHANGE: `IEntityFinalizer<TEntity>` resides now in the
`KubeOps.Abstractions.Reconciliation.Finalizer` namespace instead of
`KubeOps.Abstractions.Finalizer`.

BREAKING CHANGE: `EntityRequeue` resides now in the
`KubeOps.Abstractions.Reconciliation.Queue` namespace instead of
`KubeOps.Abstractions.Queue`.

BREAKING CHANGE: `IEntityRequeueFactory` resides now in the
`KubeOps.Abstractions.Reconciliation.Queue` namespace instead of
`KubeOps.Abstractions.Queue`.

BREAKING CHANGE: "semi breaking"; compatible finalizers
are attached and detached by default now. If there exists a type
that supports finalizing a given entity type, it will be attached
by default. This setting can be configured by `AutoAttachFinalizers`
and `AutoDetachFinalizers` in the operator settings.

BREAKING CHANGE: The `MutationResult` record is now
sealed.

--- a/docs/docs/operator/getting-started.mdx
+++ b/docs/docs/operator/getting-started.mdx
@@ -16,7 +16,7 @@ Before you begin, ensure you have the following installed:
 - A local Kubernetes cluster (like [kind](https://kind.sigs.k8s.io/) or [minikube](https://minikube.sigs.k8s.io/))
 
 :::warning Development Environment
-For local development, we recommend using `kind` or Docker Desktop as it provides a lightweight Kubernetes cluster that's perfect for operator development. Make sure your cluster is running before proceeding with the installation steps.
+For local development, we recommend using `kind` or Docker Desktop, which provide lightweight Kubernetes clusters ideal for operator development. Ensure your cluster is running before proceeding with the installation steps.
 :::
 
 ## Installing KubeOps Templates
@@ -150,10 +150,20 @@ Controllers implement the reconciliation logic for your custom resources:
 [EntityRbac(typeof(V1DemoEntity), Verbs = RbacVerb.All)]
 public class DemoController : IEntityController<V1DemoEntity>
 {
-    public Task ReconcileAsync(V1DemoEntity entity, CancellationToken cancellationToken)
+    public Task<ReconciliationResult<V1DemoEntity>> ReconcileAsync(
+        V1DemoEntity entity,
+        CancellationToken cancellationToken)
     {
         // Implement your reconciliation logic here
-        return Task.CompletedTask;
+        return Task.FromResult(ReconciliationResult<V1DemoEntity>.Success(entity));
+    }
+
+    public Task<ReconciliationResult<V1DemoEntity>> DeletedAsync(
+        V1DemoEntity entity,
+        CancellationToken cancellationToken)
+    {
+        // Handle deletion event
+        return Task.FromResult(ReconciliationResult<V1DemoEntity>.Success(entity));
     }
 }
 ```
@@ -165,10 +175,12 @@ Finalizers handle cleanup when resources are deleted:
 ```csharp
 public class DemoFinalizer : IEntityFinalizer<V1DemoEntity>
 {
-    public Task FinalizeAsync(V1DemoEntity entity, CancellationToken cancellationToken)
+    public Task<ReconciliationResult<V1DemoEntity>> FinalizeAsync(
+        V1DemoEntity entity,
+        CancellationToken cancellationToken)
     {
         // Implement your cleanup logic here
-        return Task.CompletedTask;
+        return Task.FromResult(ReconciliationResult<V1DemoEntity>.Success(entity));
     }
 }
 ```
@@ -181,6 +193,7 @@ The following sections will dive deeper into:
 - [Controllers](./building-blocks/controllers) - Implementing reconciliation logic
 - [Finalizers](./building-blocks/finalizer) - Handling resource cleanup
 - [Webhooks](./building-blocks/webhooks) - Implementing validation and mutation webhooks
+- [Advanced Configuration](./advanced-configuration) - Leader election, durable queues, and finalizer management
 
 Make sure to read these sections before deploying your operator to production.
 :::
