--- a/docs/docs/operator/cli.mdx
+++ b/docs/docs/operator/cli.mdx
@@ -99,6 +99,7 @@ Common options:
 - `--clear-out`: Clear output directory before generation
 - `--docker-image`: Specify Docker image name
 - `--docker-image-tag`: Specify Docker image tag
+- `--no-ansi`: Disable ANSI colored output (useful for CI/CD pipelines)
 
 ## Cluster Information
 
